public_html/css/zenithMainStyle.css
/* ... */
.forRegister {
    margin-left: 15px;
    text-align: justify;
}

.forRegister .btn {
    width: 50%;
    text-align: center;
    background: whitesmoke;
    border: 2px black solid;
    margin-top: 10px;
}

.hr-or {
    font-family: sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.2;
    letter-spacing: 2.5px;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    margin: 20px 0 20px 0;
    text-align: center;
}
#genderbox {
    width:100%;
    display:inline;
}
/*End of Login CSS*/

/*Shopping Cart CSS*/
.ui-w-40 {
    width: 40px !important;
    height: auto;
}

.card{
    box-shadow: 0 1px 15px 1px rgba(52,40,104,.08);    
}

.ui-product-color {
    display: inline-block;
    overflow: hidden;
    margin: .144em;
    width: .875rem;
    height: .875rem;
    border-radius: 10rem;
    -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset;
    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset;
    vertical-align: middle;
}

.ui-w-40 {
    width: 150px !important;
    height: auto;
}
/*End of Shopping Cart CSS*/

/*Register page CSS*/
.registering {
    background: white;
    box-shadow: 5px 5px 5px 5px rgba(175,175,175,0.5);
}

.registering * {box-sizing: border-box}

/* Full-width input fields */
.registering input[type=text], input[type=password] {
    width: 100%;
    padding: 15px;
    margin: 5px 0 22px 0;
    display: inline-block;
    border: none;
    background: #f1f1f1;
}

.registering input[type=text]:focus, input[type=password]:focus {
    background-color: #ddd;
    outline: none;
}

.registering hr {
    border: 1px solid black;
    margin-bottom: 25px;
}

/* Set a style for all buttons */
.registering button {
    background-color: whitesmoke;
    border: 2px black solid;
    text-transform: uppercase;
    font-size: 16px;
    color: black;
    padding: 14px 20px;
    margin: 8px 0;
    cursor: pointer;
    width: 100%;
    opacity: 0.8;
}

.registering button:hover {
    opacity:1;
}

/* Extra styles for the cancel button */
.registering .cancelbtn {
    padding: 14px 20px;
    background-color: #f44336;
}

/* Float cancel and signup buttons and add an equal width */
.registering .cancelbtn, .signupbtn {
    float: left;
    width: 50%;
}

/* Add padding to container elements */
.registering .container {
    padding: 16px;
}

/* Clear floats */
.registering .clearfix::after {
    content: "";
    clear: both;
    display: table;
}

/* Change styles for cancel button and signup button on extra small screens */
@media screen and (max-width: 300px) {
    .registering .cancelbtn, .signupbtn {
        width: 100%;
    }
}

/*About us CSS*/
.about-article{
    background-color: rgba(0, 0, 0, 0.6);
    margin: 50px 50px;
    padding: 30px 30px;
    width: 100%;
}

@media(max-width:992px){
    .about-article{
        background-color: rgba(0, 0, 0, 0.6);
        margin: 50px 50px;
        padding: 10px 10px;
        width: 100%;
        overflow-x: hidden;
    }
}

.about-article h3{
    color: white;
}

.about-p{
    font-size: 20px;
    color: white;
    text-align: left;
}

@media(max-width:992px){
    .about-p{
        font-size: 16px;
        color: white;
        text-align: left;
    }
}

#about-history{
    background-color: grey;
    background-image: url("../img/bg1.jpg");
    background-attachment: fixed;
    object-fit: cover;
}

#about-values{
    background-color: grey;
    background-image: url("../img/bg2.jpg");
    background-attachment: fixed;
    object-fit: cover;
}

.about-jumbotron h1{
    color: white;
    text-align: center;
}

.jumbotron.about-jumbotron{
    background-image: url("../img/shoe-background.jpg");
    background-repeat: no-repeat;
    padding: 30px 30px 50px 30px;
    margin-bottom: 0px;
    display: block;
    border-radius: 0px;
    object-fit: cover;
}

.about-jumbotron iframe{
    margin-left: auto;
    margin-right: auto;
    display:block;
    max-width: 80%;
}

.about-article h3{
    border-bottom: 2px #9A9A9A solid;
    color: white;
    text-align: left;
    font-size: 30px;
}

.about-team{
    text-align: center;
}

.about-person-img{
    margin: 15px 15px;
    max-width: 20%;
    max-height: 20%;
    transition: transform 0.6s;
}

.about-person-img:hover{
    transform: scale(1.25);
}

#about_video_credits{
    text-align: center;
    color: white;
}
/* end of about us css*/

/* Start of locate us css*/
.mapouter{
    position:relative;
    text-align:right;
    height:500px;
    width:1000px;
    margin-left: auto;
    margin-right: auto;
    max-width: 90%;
}

#gmap_canvas{
    max-width: 100%;
}

#locate_list{
    display: block;
    list-style-type: disc;
    margin-top: 20px;
    margin-bottom: 15px;
    margin-left: 0;
    margin-right: 0;
    padding-left: 40px;
    color: white;
}

.locate_link:link{
    color:white;
}

.locate_link:visited{
    color:white;
}

.locate_list_item{
    transition: transform 0.6s;
}

.locate_list_item img{
    visibility: hidden;
    position: absolute;
    border: 5px solid white;
    max-width: 300px;
    bottom: -60px;
    left: 180px;
}

.locate_list_item:hover{
    transform: translate(25px);
}

.locate_link:hover + img{
    visibility: visible;
}

@media(max-width:992px){
    .locate_list_item:hover{
        transform: none;
    }

    .locate_link:hover + img{
        visibility: hidden;
    }
}

.locate-article{
    background-color: rgba(0, 0, 0, 0.6);
    margin: 50px 50px;
    padding: 30px 30px;
    width: 100%;
}

.locate-article h3{
    border-bottom: 2px #9A9A9A solid;
    color: white;
    text-align: left;
    font-size: 30px;
}

/* end of locate us css*/

/* Start of profile css*/
.profilepage {
    background: white;
    box-shadow: 5px 5px 5px 5px rgba(175,175,175,0.5);
    padding: 20px 20px 50px 20px;
}

.row {
    margin-right: 0px;
    margin-left: 0px;
}
/* ... */

